Desktop_capture: fix the missing notificationbar on OSX

The problem only happens when an external monitor is connected to a MBP
and works together with the built-in screen. If the desktop capture is
started from the external monitor, e.g. window picker locates on the
external monitor, there is no notification bar on any screen. There is
no such problem when desktop capture is started from built-in screen.

The problem is because chrome aligns the notificaiton bar to the
cooridnates of the external monitor, but still draw it to the built-in
screen.

The fix is to draw the notification bar to the screen from which the
desktop capture is started, by adding the offset of x coordinat of the
curren |mainScreen|.

Bug: 671427
Change-Id: Ida11c91cc0525dc14110f42662c9f3269bf09234
Reviewed-on: https://chromium-review.googlesource.com/545115
Reviewed-by: Sergey Ulanov <sergeyu@chromium.org>
Reviewed-by: Trent Apted <tapted@chromium.org>
Commit-Queue: Weiyong Yao <braveyao@chromium.org>
Cr-Commit-Position: refs/heads/master@{#481916}
Former-commit-id: 47c94aa794bdf214c040ad45de59384a745186fa